Necessary adjustments were made to the xml structures.

--- a/android/app/src/main/res/layout/activity_academician_main.xml
+++ b/android/app/src/main/res/layout/activity_academician_main.xml
@@ -25,11 +25,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:background="#FFFFFF"
+        app:itemHorizontalTranslationEnabled="false"
         app:itemIconSize="24dp"
         app:itemIconTint="#1A9AAF"
         app:itemTextColor="#1A9AAF"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
