--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -93,10 +93,26 @@
             android:id="@+id/btnAcademician"
             android:layout_width="320dp"
             android:layout_height="55dp"
-            android:backgroundTint="#F06E1B"
+            android:backgroundTint="#F07A2E"
             android:elevation="30dp"
             android:onClick="clickAcademician"
             android:text="Akademisyen Girişi"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:cornerRadius="10dp"
+            app:strokeColor="#FFFFFF"
+            app:strokeWidth="2dp"
+            tools:ignore="OnClick" />
+
+        <Button
+            android:id="@+id/btnStudent"
+            android:layout_width="320dp"
+            android:layout_height="55dp"
+            android:backgroundTint="#F49051"
+            android:elevation="30dp"
+            android:onClick="clickStudent"
+            android:text="Öğrenci Girişi"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
