--- a/android/app/src/main/res/layout/activity_department_info.xml
+++ b/android/app/src/main/res/layout/activity_department_info.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFEEF5"
     tools:context=".view.studentView.DepartmentInfoActivity">
 
     <!-- Header -->
@@ -70,12 +70,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:layout_marginTop="130dp"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="130dp"
                 android:text="Bölüm Adı"
                 android:textColor="#000000"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/departmentName"
@@ -93,6 +93,36 @@
                 android:textStyle="normal"
                 tools:layout_editor_absoluteX="35dp"
                 tools:layout_editor_absoluteY="211dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Sınıf"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <AutoCompleteTextView
+                android:id="@+id/classNumber"
+                android:layout_width="360dp"
+                android:layout_height="54dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/edittext_bg"
+                android:clickable="true"
+                android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:hint="Sınıfınızı Girin"
+                android:inputType="none"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal" />
 
             <Button
                 android:id="@+id/saveDepartmentInfo"
@@ -119,6 +149,5 @@
 
         </LinearLayout>
     </ScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
