--- a/android/app/src/main/res/layout/activity_old_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_old_request_detail.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="#EFEEF5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFEEF5"
     tools:context=".view.academicianView.OldRequestDetailActivity">
 
     <!-- Header -->
@@ -16,9 +16,9 @@
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="7dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp">
 
@@ -28,8 +28,8 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             android:onClick="previousPage"
             android:src="@drawable/baseline_arrow_back_ios_24"
             tools:ignore="OnClick" />
@@ -43,7 +43,7 @@
             android:text="Talep Detayı"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -103,21 +103,21 @@
                         <!-- Başlık -->
                         <TextView
                             android:id="@+id/oldFirmName"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="7dp"
-                            android:text="Firma ismi"
+                            android:text="Gönderen"
                             android:textColor="#333333"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
 
                         <TextView
-                            android:id="@+id/oldFirmWorkArea"
-                            android:layout_width="match_parent"
+                            android:id="@+id/requesterTypeOldReq"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="7dp"
-                            android:text="Çalışma alanı"
+                            android:text="Tür"
                             android:textColor="#666666"
                             android:textSize="13sp" />
 
@@ -126,7 +126,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="7dp"
-                            android:text="📧 firma maili"
+                            android:text="📧 mail"
                             android:textColor="#3F51B5"
                             android:textSize="13sp" />
 
@@ -135,7 +135,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="7dp"
-                            android:text="📞 firma tel"
+                            android:text="📞 tel"
                             android:textColor="#666666"
                             android:textSize="13sp" />
                     </LinearLayout>
@@ -181,8 +181,8 @@
                         android:layout_marginBottom="3dp"
                         android:text="Açıklama"
                         android:textColor="#000000"
-                        android:textStyle="bold"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/requestMessage"
@@ -200,8 +200,8 @@
                         android:layout_marginBottom="3dp"
                         android:text="Oluşturulma Tarihi"
                         android:textColor="#000000"
-                        android:textStyle="bold"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/requestDate"
@@ -269,10 +269,9 @@
                         android:id="@+id/academicianCardContainer"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="vertical"
                         android:padding="5dp"
-                        android:paddingVertical="10dp"
-                        android:orientation="vertical" />
-
+                        android:paddingVertical="10dp" />
 
 
                 </LinearLayout>
