--- a/android/app/src/main/res/layout/activity_student_info.xml
+++ b/android/app/src/main/res/layout/activity_student_info.xml
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="130dp"
+                android:layout_marginTop="120dp"
                 android:text="Öğrenci Adı"
                 android:textColor="#000000"
                 android:textSize="16sp"
@@ -122,6 +122,34 @@
                 tools:layout_editor_absoluteX="35dp"
                 tools:layout_editor_absoluteY="211dp" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:text="Öğrenci Telefon Numarası"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/studentPhone"
+                android:layout_width="360dp"
+                android:layout_height="54dp"
+                android:layout_gravity="center"
+                android:layout_marginVertical="7dp"
+                android:background="@drawable/edittext_bg"
+                android:hint="Telefonunuzu Girin"
+                android:inputType="text"
+                android:padding="12dp"
+                android:textColor="#000000"
+                android:textColorHint="#999999"
+                android:textSize="16sp"
+                android:textStyle="normal"
+                tools:layout_editor_absoluteX="35dp"
+                tools:layout_editor_absoluteY="211dp" />
+
             <Button
                 android:id="@+id/saveStudentInfo"
                 android:layout_width="360dp"
@@ -143,7 +171,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="OnClick"
                 tools:layout_editor_absoluteY="368dp" />
-
 
         </LinearLayout>
     </ScrollView>
