--- a/android/app/src/main/res/layout/activity_student_request.xml
+++ b/android/app/src/main/res/layout/activity_student_request.xml
@@ -80,6 +80,7 @@
                 android:id="@+id/radioGroupStudentCategories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="300dp"
                 android:divider="@android:color/transparent"
                 android:orientation="vertical"
@@ -95,8 +96,7 @@
                     android:padding="10dp"
                     android:text="Staj Başvurusu"
                     android:textColor="#000000"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radioProject"
@@ -108,8 +108,7 @@
                     android:padding="10dp"
                     android:text="Proje Talebi"
                     android:textColor="#000000"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radioMentorship"
@@ -121,8 +120,7 @@
                     android:padding="10dp"
                     android:text="Danışmanlık / Rehberlik"
                     android:textColor="#000000"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radioEventParticipation"
@@ -134,8 +132,7 @@
                     android:padding="10dp"
                     android:text="Etkinlik / Seminer Katılımı"
                     android:textColor="#000000"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radioScholarship"
@@ -147,8 +144,7 @@
                     android:padding="10dp"
                     android:text="Burs / Destek Talebi"
                     android:textColor="#000000"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
                     android:id="@+id/radioCollaboration"
@@ -160,8 +156,7 @@
                     android:padding="10dp"
                     android:text="Araştırma / Proje İş Birliği"
                     android:textColor="#000000"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textSize="15sp" />
 
             </RadioGroup>
         </LinearLayout>
