--- a/android/app/src/main/res/layout/fragment_pending_request_academician.xml
+++ b/android/app/src/main/res/layout/fragment_pending_request_academician.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#EFEEF5"
     android:layout_height="match_parent"
+    android:background="#EFEEF5"
     tools:context=".view.academicianView.PendingRequestAcademicianFragment">
 
     <!-- Header -->
@@ -15,9 +15,9 @@
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="7dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp">
 
@@ -31,7 +31,7 @@
             android:text="Bekleyen Talepler"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -39,15 +39,15 @@
         android:id="@+id/fragmentPendingReqAcadRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
         android:clipToPadding="false"
-        android:overScrollMode="always"
+        android:overScrollMode="never"
+        android:paddingTop="12dp"
+        android:paddingBottom="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/materialCardView"
         tools:listitem="@layout/item_request_card" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
