--- a/android/app/src/main/res/drawable/radio_item_bg.xml
+++ b/android/app/src/main/res/drawable/radio_item_bg.xml
@@ -1,4 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#44D145"/>
+            <corners android:radius="12dp"/>
+            <padding android:left="12dp" android:top="12dp" android:right="12dp" android:bottom="12dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white"/>
+            <corners android:radius="10dp"/>
+        </shape>
+    </item>
 </selector>
