--- a/android/app/src/main/res/drawable/rounded_bg_person.xml
+++ b/android/app/src/main/res/drawable/rounded_bg_person.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#1A9AAF" />
+    <corners android:radius="5dp" />
+    <padding
+        android:left="7dp"
+        android:top="2dp"
+        android:right="7dp"
+        android:bottom="2dp" />
+</shape>
