back buttons have been edited

--- a/android/app/src/main/res/layout/activity_pending_requests.xml
+++ b/android/app/src/main/res/layout/activity_pending_requests.xml
@@ -61,7 +61,7 @@
         android:clipToPadding="false"
         android:overScrollMode="always"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_request_card" />
+        tools:listitem="@layout/item_admin_card" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
